--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Divindo</title>
 </head>
 <body>
+    <h1>ME DÊ MB</h1>
+    <p>ass: Stefeson XDD</p>
     <script src="script.js"></script>
 </body>
 </html>
